--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
    font-size: 30px;
 }
 #howMuch {
+   text-align: center;
    width: 30px;
    height: 30px;
    font-size: 30px;
@@ -30,9 +31,10 @@ body {
 #calculatorButton {
    margin-top: 10px;
    width: 100%;
-   height: 30px;
+   height: 50px;
    background-color: #76ABAE;
    font-family: "Russo One", sans-serif;
+   font-size: 30px;
    color: black;
 }
 #calculatorResult {
@@ -64,13 +66,15 @@ body {
    height: 30px;
    font-size: 30px;
    margin: 0 10px 0 10px;
+   text-align: center;
 }
 #convertorButton {
    margin-top: 10px;
    width: 100%;
-   height: 30px;
+   height: 50px;
    background-color: #76ABAE;
    font-family: "Russo One", sans-serif;
+   font-size: 30px;
    color: black;
 }
 #convertorResult {
