--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ body {
     background-color: black;
     padding: 5px 5px;
 }
+#convertorResultRx2 {
+    background-color: black;
+    padding: 5px 5px;
+}
 #Hostes {
    padding-top: 10px;
    padding-bottom: 10px;
