--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@ body {
    font-family: "Russo One", sans-serif;
    color: #EEEEEE;
 }
-
-
-
 #calculatorContainer {
    text-align: center;
    margin-top: 20px;
@@ -62,22 +59,23 @@ body {
 }
 
 #convertor {
-   padding-top: 10px;
+   padding: 10px 10px ;
    background-color: #31363F;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 #convertorWords {
    font-size: 30px;
 }
 #convertorHowMuch {
-   width: 100px;
-   height: 30px;
+   width: 200px;
+   height: 60px;
    font-size: 30px;
    margin: 0 10px 0 10px;
    text-align: center;
 }
 #convertorButton {
-   margin-top: 10px;
-   width: 100%;
    height: 50px;
    background-color: #76ABAE;
    font-family: "Russo One", sans-serif;
@@ -104,6 +102,10 @@ body {
    padding-bottom: 10px;
    background-color: #31363F;
    border: 1px solid #EEEEEE;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 5px;
 }
 #Death:hover {
    background-color: #00538e;
@@ -117,6 +119,10 @@ body {
    padding-bottom: 10px;
    background-color: #31363F;
    border: 1px solid #EEEEEE;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 1px;
 }
 #convertorResultK {
     background-color: black;
@@ -130,6 +136,10 @@ body {
    padding-bottom: 10px;
    background-color: #31363F;
    border: 1px solid #EEEEEE;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 5px;
 }
 #Bar:hover {
    background-color: #00538e;
@@ -169,10 +179,12 @@ a {
    color: aquamarine;
 }
 
+#end {
+    text-align: left;
+}
 #workDay {
-  background-color: seagreen;
-  padding: 0 20px;
-  display: none;
+    background: seagreen;
+    padding: 0 20px;
 }
 
 /**********************************FOOTER***/
